--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@langchain/langgraph": "^0.2.45",
     "@langchain/openai": "^0.4.3",
     "@langchain/textsplitters": "^0.1.0",
+    "chalk": "^5.4.1",
     "dotenv": "^16.4.5",
     "langchain": "^0.3.15",
     "pdf-parse": "^1.1.1"
